fix: wrong fontsize for submit button

--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -19,6 +19,8 @@
 
 @media screen and (max-width: 767px) {
   .popup__submit {
+    font-size: 14px;
+    line-height: 17px;
     margin-top: 15px;
     min-height: 46px;
   }
